--- a/DEPOSITO/deposito.css
+++ b/DEPOSITO/deposito.css
@@ -1,4 +1,4 @@
-body {
+/*body {
     margin: 0;
     padding: 0;
     display: flex;
@@ -19,7 +19,29 @@ body {
     width: 100%;
     max-width: 500px;
 }
-
+*/
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #2f2fd4;
+    font-family: Arial, sans-serif;
+    
+}
+contenedor {
+    height: 100vh;
+}
+.panel {
+    margin-top: 200px;
+    text-align: center;
+    color: white;
+    background-color: #3a3ab3;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    max-width: 500px;
+}
 .header {
     display: flex;
     justify-content: space-between;
