--- a/PIN/PIN.css
+++ b/PIN/PIN.css
@@ -31,11 +31,6 @@ body {
     margin-right: 10px;
 }
 
-.logo {
-    display: flex;
-    align-items: center;
-}
-
 .time {
     font-size: 14px;
 }
@@ -94,15 +89,27 @@ body {
 
 .buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .exit-btn {
     background-color: #e74c3c;
+    color: white;
     padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 .confirm-btn {
     background-color: #2980b9;
+    color: white;
     padding: 10px 20px;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
 }
