--- a/CONSULTA DE SALDOS/consulta_saldo.css
+++ b/CONSULTA DE SALDOS/consulta_saldo.css
@@ -61,6 +61,7 @@ h2 {
 .buttons {
     display: flex;
     justify-content: center;
+    gap: 10px;
 }
 
 .btn {
@@ -80,4 +81,12 @@ h2 {
 
 .btn-primary:hover {
     background-color: #1f6c8f;
+}
+
+.btn-secondary {
+    background-color: #34495e;
+}
+
+.btn-secondary:hover {
+    background-color: #2c3e50;
 }
