--- a/DEPOSITO/deposito.css
+++ b/DEPOSITO/deposito.css
@@ -1,38 +1,17 @@
-/*body {
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #2f2fd4;
-    font-family: Arial, sans-serif;
-}
-
-.inicio-container {
-    text-align: center;
-    color: white;
-    background-color: #3a3ab3;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-    width: 100%;
-    max-width: 500px;
-}
-*/
 body {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #2f2fd4;
     font-family: Arial, sans-serif;
-    
 }
-contenedor {
+
+.contenedor {
     height: 100vh;
 }
+
 .panel {
-    margin-top: 200px;
+    margin-top: 100px;
     text-align: center;
     color: white;
     background-color: #3a3ab3;
@@ -42,6 +21,8 @@ contenedor {
     width: 100%;
     max-width: 500px;
 }
+
+
 .header {
     display: flex;
     justify-content: space-between;
@@ -58,7 +39,7 @@ contenedor {
 }
 
 h2 {
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .single-line-display {
