Fase 2 con modificaciones funcionales 061120244PM

--- a/styles.css
+++ b/styles.css
@@ -88,3 +88,11 @@ body {
     border: none;
     cursor: pointer;
 }
+
+.control-borrar {
+    position: absolute;
+    bottom: -180px;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
